# Bone-Scan

./: .gitignore  README.md  clean_dicom.sh  clean_label.ipynb  csv_merge.ipynb  merged_snr_2023.csv  pyproject.toml  setup.cfg
bonescan/preprocessing/: dicom_handler.py  images_labels_mapping.py  images_preprocessing.py  labels_extraction.py  merge_modality.py  modality_extraction.py
bonescan/utils/: common.py  imagetools.py  keywords.json  texttools.py
sandbox/: review_pattern.py
