[metadata]
name = bonescan # project package name
version = 1.0.0 # project version
description = A package for Bone AI Classification project
long_description = file: README.md
long_description_content_type = text/markdown
author = Wachiii
author_email = wachiraya.chu@student.mahidol.edu
Classifiers = 
    Programming Language :: Python :: 3

[options]
packages = find:
zip_safe = False
include_package_data = True
install_requires = 
    numpy
    pandas
    matplotlib

