[metadata]
name = bonescan
version = 1.0.0
description = A package for Bone AI Classification project
long_description = file: README.md
long_description_content_type = text/markdown
author = Wachiii
author_email = wachiraya.chu@student.mahidol.edu
classifiers = 
    Programming Language :: Python :: 3

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires = 
    numpy
    pandas
    matplotlib

