[metadata]
name = bonescan
version = 1.0.0
description = A package for Bone AI Classification project
classifiers = 
    Programming Language :: Python :: 3

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires = 
    numpy
    pandas
    matplotlib
    icecream
    openpyxl
